# pax

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: docs.yml  release.yml
docs/: book.toml
docs/book/: 404.html  foreword.html  index.html  introduction.html  presentation.html  print.html  searcher-c2a407aa.js  searchindex-02fea9b4.js  searchindex-0b995b7c.js  searchindex-3a8c518e.js  searchindex-50bc1a21.js  searchindex-7c6e0b74.js  searchindex-dda49e7a.js  searchindex-e6170ac9.js  searchindex-fff090e8.js  toc-6074132a.js  toc-6696266a.js  toc-8823c364.js  toc-8cc3e45c.js  toc-a4c1f376.js  toc.html
docs/book/common_programming_concepts/: comments.html  conditions.html  data_types.html  intro.html  lists-maps.html  loops.html  variables.html
docs/book/getting_started/: hellopax.html  installation.html  intro.html
docs/book/src/theme/: pax-lang-24ee1103.js
docs/src/: SUMMARY.md  foreword.md  introduction.md  presentation.md
docs/src/common_programming_concepts/: comments.md  conditions.md  data_types.md  intro.md  lists-maps.md  loops.md  variables.md
docs/src/getting_started/: hellopax.md  installation.md  intro.md
src/: interpreter.rs  lexer.rs  main.rs  parser.rs  plexer.rs  token.rs
