[package]
name = "pax"
version = "0.2.0-alpha"
authors=["Gabriel Bermes--Poupeau"]
edition="2024"
description = "A lightning-fast, memory-safe language for data science and statistics, built from the ground up with Rust."
readme = "README.md"
repository = "https://github.com/ThorkildFregi/pax"
license = "MIT"
keywords = ["langage", "mathematics", "statistics"]

[[bin]]
name = "pax"
path = "src/main.rs"

[dependencies]
dirs = "6.0"
open = "5.1"
include_dir = "0.7"